force-app/main/default/objects/WorkOrder/fields/AdditionalProcedures__c.field-meta.xml
<CustomField>
    <fullName>AdditionalProcedures__c</fullName>
    <label>Gestiones Adicionales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solicitados</fullName>
            </value>
            <value>
                <fullName>En revisión</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>