force-app/main/default/objects/WorkOrder/fields/Ano__c.field-meta.xml
<CustomField>
    <fullName>Ano__c</fullName>
    <label>Año</label>
    <length>5</length>
    <type>Text</type>
</CustomField>