force-app/main/default/objects/WorkOrder/fields/Chasis__c.field-meta.xml
<CustomField>
    <fullName>Chasis__c</fullName>
    <label>Chasis</label>
    <length>30</length>
    <type>Text</type>
</CustomField>