force-app/main/default/objects/WorkOrder/fields/Corredor__c.field-meta.xml
<CustomField>
    <fullName>Corredor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Corredor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>