force-app/main/default/objects/WorkOrder/fields/Direccion_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Direccion_Beneficiario__c</fullName>
    <label>Direccion Beneficiario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>