force-app/main/default/objects/WorkOrder/fields/Nombre_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Asegurado__c</fullName>
    <label>Nombre Asegurado</label>
    <length>100</length>
    <type>Text</type>
</CustomField>