force-app/main/default/objects/WorkOrder/fields/Nombre_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Beneficiario__c</fullName>
    <label>Nombre Beneficiario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>