force-app/main/default/objects/WorkOrder/fields/Numero_Correlativo__c.field-meta.xml
<CustomField>
    <fullName>Numero_Correlativo__c</fullName>
    <label>Numero Correlativo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>