force-app/main/default/objects/WorkOrder/fields/Numero_Motor__c.field-meta.xml
<CustomField>
    <fullName>Numero_Motor__c</fullName>
    <label>Numero Motor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>