force-app/main/default/objects/WorkOrder/fields/Numero_Sinistro__c.field-meta.xml
<CustomField>
    <fullName>Numero_Sinistro__c</fullName>
    <label>Numero Sinistro</label>
    <length>100</length>
    <type>Text</type>
</CustomField>