force-app/main/default/objects/WorkOrder/fields/Patente__c.field-meta.xml
<CustomField>
    <fullName>Patente__c</fullName>
    <label>Patente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>