force-app/main/default/objects/WorkOrder/fields/Poliza__c.field-meta.xml
<CustomField>
    <fullName>Poliza__c</fullName>
    <description>Numero Poliza</description>
    <label>Poliza</label>
    <length>100</length>
    <type>Text</type>
</CustomField>