force-app/main/default/objects/WorkOrder/fields/Rut_Asegurado__c.field-meta.xml
<CustomField>
    <fullName>Rut_Asegurado__c</fullName>
    <label>Rut Asegurado</label>
    <length>50</length>
    <type>Text</type>
</CustomField>