force-app/main/default/objects/WorkOrder/fields/Rut_Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Rut_Beneficiario__c</fullName>
    <label>Rut Beneficiario</label>
    <length>100</length>
    <type>Text</type>
</CustomField>