force-app/main/default/objects/WorkOrder/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>