force-app/main/default/objects/WorkOrder/fields/Uso__c.field-meta.xml
<CustomField>
    <fullName>Uso__c</fullName>
    <label>Uso</label>
    <length>20</length>
    <type>Text</type>
</CustomField>