force-app/main/default/objects/WorkOrder/fields/Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Vigencia__c</fullName>
    <label>Vigencia</label>
    <length>50</length>
    <type>Text</type>
</CustomField>